--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,5 +1,24 @@
 version: 2
 
+references:
+    fetch_source: &fetch_source:
+        checkout
+
+    getting_py_version: &getting_py_version
+        run:
+            name: Get Python version
+            command: python --version
+
+    installing_dependencies: &installing_dependencies
+        run:
+            name: Installing Dependencies
+            command: sudo pip install -r requirements.txt
+
+    save_repo_cache: &save_repo_cache
+        save_cache:
+                paths: venv
+                key: v1-dependencies-{{ checksum "requirements.txt" }}
+
 jobs:
     running_flask:
         docker:
@@ -8,17 +27,10 @@ jobs:
         restore_cache:
             keys: v1-dependencies-{{ checksum "requirements.txt" }}
         steps:
-            - checkout
-            - run:
-                name: Get Python version
-                command: python --version
-            - run:
-                name: Installing Dependencies
-                command: sudo pip install -r requirements.txt
-            - save_cache:
-                paths: venv
-                key: v1-dependencies-{{ checksum "requirements.txt" }}
-
+            - *fetch_source
+            - *getting_py_version
+            - *installing_dependencies
+            - *save_repo_cache
 
 workflows:
     version: 2
